tests/expectations/compiler/storage/external_storage.out
program child.aleo;

struct Point:
    x as field;
    y as field;

struct Stats:
    values as [u32; 3u32];
    active as boolean;

mapping flag__:
    key as boolean.public;
    value as boolean.public;

mapping scalar_val__:
    key as boolean.public;
    value as scalar.public;

mapping field_val__:
    key as boolean.public;
    value as field.public;

mapping group_val__:
    key as boolean.public;
    value as group.public;

mapping point__:
    key as boolean.public;
    value as Point.public;

mapping points__:
    key as boolean.public;
    value as [Point; 2u32].public;

mapping stats__:
    key as boolean.public;
    value as Stats.public;

mapping arr_u32__:
    key as boolean.public;
    value as [u32; 3u32].public;

mapping arr_bool__:
    key as boolean.public;
    value as [boolean; 2u32].public;

mapping nested__:
    key as boolean.public;
    value as [[u8; 2u32]; 2u32].public;

mapping counter__:
    key as boolean.public;
    value as u8.public;

mapping vec__:
    key as u32.public;
    value as u8.public;

mapping vec__len__:
    key as boolean.public;
    value as u32.public;

function initialize:
    async initialize into r0;
    output r0 as child.aleo/initialize.future;

finalize initialize:
    set true into flag__[false];
    set 1scalar into scalar_val__[false];
    set 42field into field_val__[false];
    set 0group into group_val__[false];
    cast 1field 2field into r0 as Point;
    set r0 into point__[false];
    cast 10field 20field into r1 as Point;
    cast 30field 40field into r2 as Point;
    cast r1 r2 into r3 as [Point; 2u32];
    set r3 into points__[false];
    cast 5u32 10u32 15u32 into r4 as [u32; 3u32];
    cast r4 true into r5 as Stats;
    set r5 into stats__[false];
    cast 7u32 8u32 9u32 into r6 as [u32; 3u32];
    set r6 into arr_u32__[false];
    cast true false into r7 as [boolean; 2u32];
    set r7 into arr_bool__[false];
    cast 1u8 2u8 into r8 as [u8; 2u32];
    cast 3u8 4u8 into r9 as [u8; 2u32];
    cast r8 r9 into r10 as [[u8; 2u32]; 2u32];
    set r10 into nested__[false];
    set 9u8 into counter__[false];
    get.or_use vec__len__[false] 0u32 into r11;
    add r11 1u32 into r12;
    set r12 into vec__len__[false];
    set 50u8 into vec__[r11];

function wipe:
    async wipe into r0;
    output r0 as child.aleo/wipe.future;

finalize wipe:
    remove flag__[false];
    remove scalar_val__[false];
    remove field_val__[false];
    remove group_val__[false];
    remove point__[false];
    remove points__[false];
    remove stats__[false];
    remove arr_u32__[false];
    remove arr_bool__[false];
    remove nested__[false];
    remove counter__[false];
    set 0u32 into vec__len__[false];

constructor:
    assert.eq edition 0u16;
// --- Next Program --- //
import child.aleo;
program test.aleo;

struct Optional__ATAkdHctJwx:
    is_some as boolean;
    val as boolean;

struct Optional__9y0TjJOC4Nk:
    is_some as boolean;
    val as scalar;

struct Optional__7o6su2Uhzht:
    is_some as boolean;
    val as field;

struct Optional__9SsWRr2WG5s:
    is_some as boolean;
    val as group;

struct Optional__7G49nMxvEkY:
    is_some as boolean;
    val as child.aleo/Point;

struct Optional__CIFHV93i7jy:
    is_some as boolean;
    val as [child.aleo/Point; 2u32];

struct Optional__Lq45m8HPNtd:
    is_some as boolean;
    val as child.aleo/Stats;

struct Optional__44OvQX0aUQS:
    is_some as boolean;
    val as [u32; 3u32];

struct Optional__1QRp3ZHeoMr:
    is_some as boolean;
    val as [boolean; 2u32];

struct Optional__BYnjU42CUEm:
    is_some as boolean;
    val as [[u8; 2u32]; 2u32];

struct Optional__3aph2JMPtnA:
    is_some as boolean;
    val as u8;

function check_initialized:
    async check_initialized into r0;
    output r0 as test.aleo/check_initialized.future;

finalize check_initialized:
    contains child.aleo/flag__[false] into r0;
    get.or_use child.aleo/flag__[false] false into r1;
    cast true r1 into r2 as Optional__ATAkdHctJwx;
    cast false false into r3 as Optional__ATAkdHctJwx;
    ternary r0 r2.is_some r3.is_some into r4;
    ternary r0 r2.val r3.val into r5;
    cast r4 r5 into r6 as Optional__ATAkdHctJwx;
    assert.eq r6.is_some true;
    is.eq r6.val true into r7;
    assert.eq r7 true;
    contains child.aleo/scalar_val__[false] into r8;
    get.or_use child.aleo/scalar_val__[false] 0scalar into r9;
    cast true r9 into r10 as Optional__9y0TjJOC4Nk;
    cast false 0scalar into r11 as Optional__9y0TjJOC4Nk;
    ternary r8 r10.is_some r11.is_some into r12;
    ternary r8 r10.val r11.val into r13;
    cast r12 r13 into r14 as Optional__9y0TjJOC4Nk;
    assert.eq r14.is_some true;
    is.eq r14.val 1scalar into r15;
    assert.eq r15 true;
    contains child.aleo/field_val__[false] into r16;
    get.or_use child.aleo/field_val__[false] 0field into r17;
    cast true r17 into r18 as Optional__7o6su2Uhzht;
    cast false 0field into r19 as Optional__7o6su2Uhzht;
    ternary r16 r18.is_some r19.is_some into r20;
    ternary r16 r18.val r19.val into r21;
    cast r20 r21 into r22 as Optional__7o6su2Uhzht;
    assert.eq r22.is_some true;
    is.eq r22.val 42field into r23;
    assert.eq r23 true;
    contains child.aleo/group_val__[false] into r24;
    get.or_use child.aleo/group_val__[false] 0group into r25;
    cast true r25 into r26 as Optional__9SsWRr2WG5s;
    cast false 0group into r27 as Optional__9SsWRr2WG5s;
    ternary r24 r26.is_some r27.is_some into r28;
    ternary r24 r26.val r27.val into r29;
    cast r28 r29 into r30 as Optional__9SsWRr2WG5s;
    assert.eq r30.is_some true;
    is.eq r30.val 0group into r31;
    assert.eq r31 true;
    contains child.aleo/point__[false] into r32;
    cast 0field 0field into r33 as child.aleo/Point;
    get.or_use child.aleo/point__[false] r33 into r34;
    cast true r34 into r35 as Optional__7G49nMxvEkY;
    cast 0field 0field into r36 as child.aleo/Point;
    cast false r36 into r37 as Optional__7G49nMxvEkY;
    ternary r32 r35.val.x r37.val.x into r38;
    ternary r32 r35.val.y r37.val.y into r39;
    cast r38 r39 into r40 as child.aleo/Point;
    ternary r32 r35.is_some r37.is_some into r41;
    cast r41 r40 into r42 as Optional__7G49nMxvEkY;
    assert.eq r42.is_some true;
    is.eq r42.val.x 1field into r43;
    assert.eq r43 true;
    is.eq r42.val.y 2field into r44;
    assert.eq r44 true;
    contains child.aleo/points__[false] into r45;
    cast 0field 0field into r46 as child.aleo/Point;
    cast r46 r46 into r47 as [child.aleo/Point; 2u32];
    get.or_use child.aleo/points__[false] r47 into r48;
    cast true r48 into r49 as Optional__CIFHV93i7jy;
    cast 0field 0field into r50 as child.aleo/Point;
    cast r50 r50 into r51 as [child.aleo/Point; 2u32];
    cast false r51 into r52 as Optional__CIFHV93i7jy;
    ternary r45 r49.val[0u32].x r52.val[0u32].x into r53;
    ternary r45 r49.val[0u32].y r52.val[0u32].y into r54;
    cast r53 r54 into r55 as child.aleo/Point;
    ternary r45 r49.val[1u32].x r52.val[1u32].x into r56;
    ternary r45 r49.val[1u32].y r52.val[1u32].y into r57;
    cast r56 r57 into r58 as child.aleo/Point;
    cast r55 r58 into r59 as [child.aleo/Point; 2u32];
    ternary r45 r49.is_some r52.is_some into r60;
    cast r60 r59 into r61 as Optional__CIFHV93i7jy;
    assert.eq r61.is_some true;
    is.eq r61.val[0u32].x 10field into r62;
    assert.eq r62 true;
    is.eq r61.val[1u32].y 40field into r63;
    assert.eq r63 true;
    contains child.aleo/stats__[false] into r64;
    cast 0u32 0u32 0u32 into r65 as [u32; 3u32];
    cast r65 false into r66 as child.aleo/Stats;
    get.or_use child.aleo/stats__[false] r66 into r67;
    cast true r67 into r68 as Optional__Lq45m8HPNtd;
    cast r65 false into r69 as child.aleo/Stats;
    cast false r69 into r70 as Optional__Lq45m8HPNtd;
    ternary r64 r68.val.values[0u32] r70.val.values[0u32] into r71;
    ternary r64 r68.val.values[1u32] r70.val.values[1u32] into r72;
    ternary r64 r68.val.values[2u32] r70.val.values[2u32] into r73;
    cast r71 r72 r73 into r74 as [u32; 3u32];
    ternary r64 r68.val.active r70.val.active into r75;
    cast r74 r75 into r76 as child.aleo/Stats;
    ternary r64 r68.is_some r70.is_some into r77;
    cast r77 r76 into r78 as Optional__Lq45m8HPNtd;
    assert.eq r78.is_some true;
    is.eq r78.val.values[1u32] 10u32 into r79;
    assert.eq r79 true;
    is.eq r78.val.active true into r80;
    assert.eq r80 true;
    contains child.aleo/arr_u32__[false] into r81;
    get.or_use child.aleo/arr_u32__[false] r65 into r82;
    cast true r82 into r83 as Optional__44OvQX0aUQS;
    cast false r65 into r84 as Optional__44OvQX0aUQS;
    ternary r81 r83.val[0u32] r84.val[0u32] into r85;
    ternary r81 r83.val[1u32] r84.val[1u32] into r86;
    ternary r81 r83.val[2u32] r84.val[2u32] into r87;
    cast r85 r86 r87 into r88 as [u32; 3u32];
    ternary r81 r83.is_some r84.is_some into r89;
    cast r89 r88 into r90 as Optional__44OvQX0aUQS;
    assert.eq r90.is_some true;
    is.eq r90.val[2u32] 9u32 into r91;
    assert.eq r91 true;
    contains child.aleo/arr_bool__[false] into r92;
    cast false false into r93 as [boolean; 2u32];
    get.or_use child.aleo/arr_bool__[false] r93 into r94;
    cast true r94 into r95 as Optional__1QRp3ZHeoMr;
    cast false r93 into r96 as Optional__1QRp3ZHeoMr;
    ternary r92 r95.val[0u32] r96.val[0u32] into r97;
    ternary r92 r95.val[1u32] r96.val[1u32] into r98;
    cast r97 r98 into r99 as [boolean; 2u32];
    ternary r92 r95.is_some r96.is_some into r100;
    cast r100 r99 into r101 as Optional__1QRp3ZHeoMr;
    assert.eq r101.is_some true;
    is.eq r101.val[0u32] true into r102;
    assert.eq r102 true;
    contains child.aleo/nested__[false] into r103;
    cast 0u8 0u8 into r104 as [u8; 2u32];
    cast r104 r104 into r105 as [[u8; 2u32]; 2u32];
    get.or_use child.aleo/nested__[false] r105 into r106;
    cast true r106 into r107 as Optional__BYnjU42CUEm;
    cast false r105 into r108 as Optional__BYnjU42CUEm;
    ternary r103 r107.val[0u32][0u32] r108.val[0u32][0u32] into r109;
    ternary r103 r107.val[0u32][1u32] r108.val[0u32][1u32] into r110;
    cast r109 r110 into r111 as [u8; 2u32];
    ternary r103 r107.val[1u32][0u32] r108.val[1u32][0u32] into r112;
    ternary r103 r107.val[1u32][1u32] r108.val[1u32][1u32] into r113;
    cast r112 r113 into r114 as [u8; 2u32];
    cast r111 r114 into r115 as [[u8; 2u32]; 2u32];
    ternary r103 r107.is_some r108.is_some into r116;
    cast r116 r115 into r117 as Optional__BYnjU42CUEm;
    assert.eq r117.is_some true;
    is.eq r117.val[1u32][1u32] 4u8 into r118;
    assert.eq r118 true;
    contains child.aleo/counter__[false] into r119;
    get.or_use child.aleo/counter__[false] 0u8 into r120;
    cast true r120 into r121 as Optional__3aph2JMPtnA;
    cast false 0u8 into r122 as Optional__3aph2JMPtnA;
    ternary r119 r121.is_some r122.is_some into r123;
    ternary r119 r121.val r122.val into r124;
    cast r123 r124 into r125 as Optional__3aph2JMPtnA;
    assert.eq r125.is_some true;
    is.eq r125.val 9u8 into r126;
    assert.eq r126 true;
    get.or_use child.aleo/vec__len__[false] 0u32 into r127;
    lt 2u32 r127 into r128;
    get.or_use child.aleo/vec__[2u32] 0u8 into r129;
    cast true r129 into r130 as Optional__3aph2JMPtnA;
    cast false 0u8 into r131 as Optional__3aph2JMPtnA;
    ternary r128 r130.is_some r131.is_some into r132;
    ternary r128 r130.val r131.val into r133;
    cast r132 r133 into r134 as Optional__3aph2JMPtnA;
    assert.eq r134.is_some true;
    is.eq r134.val 70u8 into r135;
    assert.eq r135 true;

function check_wiped:
    async check_wiped into r0;
    output r0 as test.aleo/check_wiped.future;

finalize check_wiped:
    contains child.aleo/flag__[false] into r0;
    get.or_use child.aleo/flag__[false] false into r1;
    cast true r1 into r2 as Optional__ATAkdHctJwx;
    cast false false into r3 as Optional__ATAkdHctJwx;
    ternary r0 r2.is_some r3.is_some into r4;
    ternary r0 r2.val r3.val into r5;
    cast r4 r5 into r6 as Optional__ATAkdHctJwx;
    cast false false into r7 as Optional__ATAkdHctJwx;
    is.eq r6 r7 into r8;
    assert.eq r8 true;
    contains child.aleo/scalar_val__[false] into r9;
    get.or_use child.aleo/scalar_val__[false] 0scalar into r10;
    cast true r10 into r11 as Optional__9y0TjJOC4Nk;
    cast false 0scalar into r12 as Optional__9y0TjJOC4Nk;
    ternary r9 r11.is_some r12.is_some into r13;
    ternary r9 r11.val r12.val into r14;
    cast r13 r14 into r15 as Optional__9y0TjJOC4Nk;
    cast false 0scalar into r16 as Optional__9y0TjJOC4Nk;
    is.eq r15 r16 into r17;
    assert.eq r17 true;
    contains child.aleo/field_val__[false] into r18;
    get.or_use child.aleo/field_val__[false] 0field into r19;
    cast true r19 into r20 as Optional__7o6su2Uhzht;
    cast false 0field into r21 as Optional__7o6su2Uhzht;
    ternary r18 r20.is_some r21.is_some into r22;
    ternary r18 r20.val r21.val into r23;
    cast r22 r23 into r24 as Optional__7o6su2Uhzht;
    cast false 0field into r25 as Optional__7o6su2Uhzht;
    is.eq r24 r25 into r26;
    assert.eq r26 true;
    contains child.aleo/group_val__[false] into r27;
    get.or_use child.aleo/group_val__[false] 0group into r28;
    cast true r28 into r29 as Optional__9SsWRr2WG5s;
    cast false 0group into r30 as Optional__9SsWRr2WG5s;
    ternary r27 r29.is_some r30.is_some into r31;
    ternary r27 r29.val r30.val into r32;
    cast r31 r32 into r33 as Optional__9SsWRr2WG5s;
    cast false 0group into r34 as Optional__9SsWRr2WG5s;
    is.eq r33 r34 into r35;
    assert.eq r35 true;
    contains child.aleo/point__[false] into r36;
    cast 0field 0field into r37 as child.aleo/Point;
    get.or_use child.aleo/point__[false] r37 into r38;
    cast true r38 into r39 as Optional__7G49nMxvEkY;
    cast 0field 0field into r40 as child.aleo/Point;
    cast false r40 into r41 as Optional__7G49nMxvEkY;
    ternary r36 r39.val.x r41.val.x into r42;
    ternary r36 r39.val.y r41.val.y into r43;
    cast r42 r43 into r44 as child.aleo/Point;
    ternary r36 r39.is_some r41.is_some into r45;
    cast r45 r44 into r46 as Optional__7G49nMxvEkY;
    cast 0field 0field into r47 as child.aleo/Point;
    cast false r47 into r48 as Optional__7G49nMxvEkY;
    is.eq r46 r48 into r49;
    assert.eq r49 true;
    contains child.aleo/points__[false] into r50;
    cast 0field 0field into r51 as child.aleo/Point;
    cast r51 r51 into r52 as [child.aleo/Point; 2u32];
    get.or_use child.aleo/points__[false] r52 into r53;
    cast true r53 into r54 as Optional__CIFHV93i7jy;
    cast 0field 0field into r55 as child.aleo/Point;
    cast r55 r55 into r56 as [child.aleo/Point; 2u32];
    cast false r56 into r57 as Optional__CIFHV93i7jy;
    ternary r50 r54.val[0u32].x r57.val[0u32].x into r58;
    ternary r50 r54.val[0u32].y r57.val[0u32].y into r59;
    cast r58 r59 into r60 as child.aleo/Point;
    ternary r50 r54.val[1u32].x r57.val[1u32].x into r61;
    ternary r50 r54.val[1u32].y r57.val[1u32].y into r62;
    cast r61 r62 into r63 as child.aleo/Point;
    cast r60 r63 into r64 as [child.aleo/Point; 2u32];
    ternary r50 r54.is_some r57.is_some into r65;
    cast r65 r64 into r66 as Optional__CIFHV93i7jy;
    cast 0field 0field into r67 as child.aleo/Point;
    cast r67 r67 into r68 as [child.aleo/Point; 2u32];
    cast false r68 into r69 as Optional__CIFHV93i7jy;
    is.eq r66 r69 into r70;
    assert.eq r70 true;
    contains child.aleo/stats__[false] into r71;
    cast 0u32 0u32 0u32 into r72 as [u32; 3u32];
    cast r72 false into r73 as child.aleo/Stats;
    get.or_use child.aleo/stats__[false] r73 into r74;
    cast true r74 into r75 as Optional__Lq45m8HPNtd;
    cast r72 false into r76 as child.aleo/Stats;
    cast false r76 into r77 as Optional__Lq45m8HPNtd;
    ternary r71 r75.val.values[0u32] r77.val.values[0u32] into r78;
    ternary r71 r75.val.values[1u32] r77.val.values[1u32] into r79;
    ternary r71 r75.val.values[2u32] r77.val.values[2u32] into r80;
    cast r78 r79 r80 into r81 as [u32; 3u32];
    ternary r71 r75.val.active r77.val.active into r82;
    cast r81 r82 into r83 as child.aleo/Stats;
    ternary r71 r75.is_some r77.is_some into r84;
    cast r84 r83 into r85 as Optional__Lq45m8HPNtd;
    cast r72 false into r86 as child.aleo/Stats;
    cast false r86 into r87 as Optional__Lq45m8HPNtd;
    is.eq r85 r87 into r88;
    assert.eq r88 true;
    contains child.aleo/arr_u32__[false] into r89;
    get.or_use child.aleo/arr_u32__[false] r72 into r90;
    cast true r90 into r91 as Optional__44OvQX0aUQS;
    cast false r72 into r92 as Optional__44OvQX0aUQS;
    ternary r89 r91.val[0u32] r92.val[0u32] into r93;
    ternary r89 r91.val[1u32] r92.val[1u32] into r94;
    ternary r89 r91.val[2u32] r92.val[2u32] into r95;
    cast r93 r94 r95 into r96 as [u32; 3u32];
    ternary r89 r91.is_some r92.is_some into r97;
    cast r97 r96 into r98 as Optional__44OvQX0aUQS;
    cast false r72 into r99 as Optional__44OvQX0aUQS;
    is.eq r98 r99 into r100;
    assert.eq r100 true;
    contains child.aleo/arr_bool__[false] into r101;
    cast false false into r102 as [boolean; 2u32];
    get.or_use child.aleo/arr_bool__[false] r102 into r103;
    cast true r103 into r104 as Optional__1QRp3ZHeoMr;
    cast false r102 into r105 as Optional__1QRp3ZHeoMr;
    ternary r101 r104.val[0u32] r105.val[0u32] into r106;
    ternary r101 r104.val[1u32] r105.val[1u32] into r107;
    cast r106 r107 into r108 as [boolean; 2u32];
    ternary r101 r104.is_some r105.is_some into r109;
    cast r109 r108 into r110 as Optional__1QRp3ZHeoMr;
    cast false r102 into r111 as Optional__1QRp3ZHeoMr;
    is.eq r110 r111 into r112;
    assert.eq r112 true;
    contains child.aleo/nested__[false] into r113;
    cast 0u8 0u8 into r114 as [u8; 2u32];
    cast r114 r114 into r115 as [[u8; 2u32]; 2u32];
    get.or_use child.aleo/nested__[false] r115 into r116;
    cast true r116 into r117 as Optional__BYnjU42CUEm;
    cast false r115 into r118 as Optional__BYnjU42CUEm;
    ternary r113 r117.val[0u32][0u32] r118.val[0u32][0u32] into r119;
    ternary r113 r117.val[0u32][1u32] r118.val[0u32][1u32] into r120;
    cast r119 r120 into r121 as [u8; 2u32];
    ternary r113 r117.val[1u32][0u32] r118.val[1u32][0u32] into r122;
    ternary r113 r117.val[1u32][1u32] r118.val[1u32][1u32] into r123;
    cast r122 r123 into r124 as [u8; 2u32];
    cast r121 r124 into r125 as [[u8; 2u32]; 2u32];
    ternary r113 r117.is_some r118.is_some into r126;
    cast r126 r125 into r127 as Optional__BYnjU42CUEm;
    cast false r115 into r128 as Optional__BYnjU42CUEm;
    is.eq r127 r128 into r129;
    assert.eq r129 true;
    contains child.aleo/counter__[false] into r130;
    get.or_use child.aleo/counter__[false] 0u8 into r131;
    cast true r131 into r132 as Optional__3aph2JMPtnA;
    cast false 0u8 into r133 as Optional__3aph2JMPtnA;
    ternary r130 r132.is_some r133.is_some into r134;
    ternary r130 r132.val r133.val into r135;
    cast r134 r135 into r136 as Optional__3aph2JMPtnA;
    cast false 0u8 into r137 as Optional__3aph2JMPtnA;
    is.eq r136 r137 into r138;
    assert.eq r138 true;
    get.or_use child.aleo/vec__len__[false] 0u32 into r139;
    is.eq r139 0u32 into r140;
    assert.eq r140 true;

function check_fallback:
    async check_fallback into r0;
    output r0 as test.aleo/check_fallback.future;

finalize check_fallback:
    contains child.aleo/flag__[false] into r0;
    get.or_use child.aleo/flag__[false] false into r1;
    cast true r1 into r2 as Optional__ATAkdHctJwx;
    cast false false into r3 as Optional__ATAkdHctJwx;
    ternary r0 r2.is_some r3.is_some into r4;
    ternary r0 r2.val r3.val into r5;
    cast r4 r5 into r6 as Optional__ATAkdHctJwx;
    ternary r6.is_some r6.val false into r7;
    is.eq r7 false into r8;
    assert.eq r8 true;
    contains child.aleo/scalar_val__[false] into r9;
    get.or_use child.aleo/scalar_val__[false] 0scalar into r10;
    cast true r10 into r11 as Optional__9y0TjJOC4Nk;
    cast false 0scalar into r12 as Optional__9y0TjJOC4Nk;
    ternary r9 r11.is_some r12.is_some into r13;
    ternary r9 r11.val r12.val into r14;
    cast r13 r14 into r15 as Optional__9y0TjJOC4Nk;
    ternary r15.is_some r15.val 0scalar into r16;
    is.eq r16 0scalar into r17;
    assert.eq r17 true;
    contains child.aleo/field_val__[false] into r18;
    get.or_use child.aleo/field_val__[false] 0field into r19;
    cast true r19 into r20 as Optional__7o6su2Uhzht;
    cast false 0field into r21 as Optional__7o6su2Uhzht;
    ternary r18 r20.is_some r21.is_some into r22;
    ternary r18 r20.val r21.val into r23;
    cast r22 r23 into r24 as Optional__7o6su2Uhzht;
    ternary r24.is_some r24.val 0field into r25;
    is.eq r25 0field into r26;
    assert.eq r26 true;
    contains child.aleo/group_val__[false] into r27;
    get.or_use child.aleo/group_val__[false] 0group into r28;
    cast true r28 into r29 as Optional__9SsWRr2WG5s;
    cast false 0group into r30 as Optional__9SsWRr2WG5s;
    ternary r27 r29.is_some r30.is_some into r31;
    ternary r27 r29.val r30.val into r32;
    cast r31 r32 into r33 as Optional__9SsWRr2WG5s;
    ternary r33.is_some r33.val 0group into r34;
    is.eq r34 0group into r35;
    assert.eq r35 true;
    contains child.aleo/point__[false] into r36;
    cast 0field 0field into r37 as child.aleo/Point;
    get.or_use child.aleo/point__[false] r37 into r38;
    cast true r38 into r39 as Optional__7G49nMxvEkY;
    cast 0field 0field into r40 as child.aleo/Point;
    cast false r40 into r41 as Optional__7G49nMxvEkY;
    ternary r36 r39.val.x r41.val.x into r42;
    ternary r36 r39.val.y r41.val.y into r43;
    cast r42 r43 into r44 as child.aleo/Point;
    ternary r36 r39.is_some r41.is_some into r45;
    cast r45 r44 into r46 as Optional__7G49nMxvEkY;
    cast 0field 0field into r47 as child.aleo/Point;
    ternary r46.is_some r46.val.x r47.x into r48;
    ternary r46.is_some r46.val.y r47.y into r49;
    cast r48 r49 into r50 as child.aleo/Point;
    is.eq r50.x 0field into r51;
    assert.eq r51 true;
    contains child.aleo/points__[false] into r52;
    cast 0field 0field into r53 as child.aleo/Point;
    cast r53 r53 into r54 as [child.aleo/Point; 2u32];
    get.or_use child.aleo/points__[false] r54 into r55;
    cast true r55 into r56 as Optional__CIFHV93i7jy;
    cast 0field 0field into r57 as child.aleo/Point;
    cast r57 r57 into r58 as [child.aleo/Point; 2u32];
    cast false r58 into r59 as Optional__CIFHV93i7jy;
    ternary r52 r56.val[0u32].x r59.val[0u32].x into r60;
    ternary r52 r56.val[0u32].y r59.val[0u32].y into r61;
    cast r60 r61 into r62 as child.aleo/Point;
    ternary r52 r56.val[1u32].x r59.val[1u32].x into r63;
    ternary r52 r56.val[1u32].y r59.val[1u32].y into r64;
    cast r63 r64 into r65 as child.aleo/Point;
    cast r62 r65 into r66 as [child.aleo/Point; 2u32];
    ternary r52 r56.is_some r59.is_some into r67;
    cast r67 r66 into r68 as Optional__CIFHV93i7jy;
    cast 0field 0field into r69 as child.aleo/Point;
    cast 0field 0field into r70 as child.aleo/Point;
    cast r69 r70 into r71 as [child.aleo/Point; 2u32];
    ternary r68.is_some r68.val[0u32].x r71[0u32].x into r72;
    ternary r68.is_some r68.val[0u32].y r71[0u32].y into r73;
    cast r72 r73 into r74 as child.aleo/Point;
    ternary r68.is_some r68.val[1u32].x r71[1u32].x into r75;
    ternary r68.is_some r68.val[1u32].y r71[1u32].y into r76;
    cast r75 r76 into r77 as child.aleo/Point;
    cast r74 r77 into r78 as [child.aleo/Point; 2u32];
    is.eq r78[0u32].x 0field into r79;
    assert.eq r79 true;
    contains child.aleo/stats__[false] into r80;
    cast 0u32 0u32 0u32 into r81 as [u32; 3u32];
    cast r81 false into r82 as child.aleo/Stats;
    get.or_use child.aleo/stats__[false] r82 into r83;
    cast true r83 into r84 as Optional__Lq45m8HPNtd;
    cast r81 false into r85 as child.aleo/Stats;
    cast false r85 into r86 as Optional__Lq45m8HPNtd;
    ternary r80 r84.val.values[0u32] r86.val.values[0u32] into r87;
    ternary r80 r84.val.values[1u32] r86.val.values[1u32] into r88;
    ternary r80 r84.val.values[2u32] r86.val.values[2u32] into r89;
    cast r87 r88 r89 into r90 as [u32; 3u32];
    ternary r80 r84.val.active r86.val.active into r91;
    cast r90 r91 into r92 as child.aleo/Stats;
    ternary r80 r84.is_some r86.is_some into r93;
    cast r93 r92 into r94 as Optional__Lq45m8HPNtd;
    cast 0u32 0u32 0u32 into r95 as [u32; 3u32];
    cast r95 false into r96 as child.aleo/Stats;
    ternary r94.is_some r94.val.values[0u32] r96.values[0u32] into r97;
    ternary r94.is_some r94.val.values[1u32] r96.values[1u32] into r98;
    ternary r94.is_some r94.val.values[2u32] r96.values[2u32] into r99;
    cast r97 r98 r99 into r100 as [u32; 3u32];
    ternary r94.is_some r94.val.active r96.active into r101;
    cast r100 r101 into r102 as child.aleo/Stats;
    is.eq r102.active false into r103;
    assert.eq r103 true;
    contains child.aleo/arr_u32__[false] into r104;
    get.or_use child.aleo/arr_u32__[false] r81 into r105;
    cast true r105 into r106 as Optional__44OvQX0aUQS;
    cast false r81 into r107 as Optional__44OvQX0aUQS;
    ternary r104 r106.val[0u32] r107.val[0u32] into r108;
    ternary r104 r106.val[1u32] r107.val[1u32] into r109;
    ternary r104 r106.val[2u32] r107.val[2u32] into r110;
    cast r108 r109 r110 into r111 as [u32; 3u32];
    ternary r104 r106.is_some r107.is_some into r112;
    cast r112 r111 into r113 as Optional__44OvQX0aUQS;
    ternary r113.is_some r113.val[0u32] 0u32 into r114;
    ternary r113.is_some r113.val[1u32] 0u32 into r115;
    ternary r113.is_some r113.val[2u32] 0u32 into r116;
    cast r114 r115 r116 into r117 as [u32; 3u32];
    is.eq r117[1u32] 0u32 into r118;
    assert.eq r118 true;
    contains child.aleo/arr_bool__[false] into r119;
    cast false false into r120 as [boolean; 2u32];
    get.or_use child.aleo/arr_bool__[false] r120 into r121;
    cast true r121 into r122 as Optional__1QRp3ZHeoMr;
    cast false r120 into r123 as Optional__1QRp3ZHeoMr;
    ternary r119 r122.val[0u32] r123.val[0u32] into r124;
    ternary r119 r122.val[1u32] r123.val[1u32] into r125;
    cast r124 r125 into r126 as [boolean; 2u32];
    ternary r119 r122.is_some r123.is_some into r127;
    cast r127 r126 into r128 as Optional__1QRp3ZHeoMr;
    ternary r128.is_some r128.val[0u32] false into r129;
    ternary r128.is_some r128.val[1u32] false into r130;
    cast r129 r130 into r131 as [boolean; 2u32];
    is.eq r131[1u32] false into r132;
    assert.eq r132 true;
    contains child.aleo/nested__[false] into r133;
    cast 0u8 0u8 into r134 as [u8; 2u32];
    cast r134 r134 into r135 as [[u8; 2u32]; 2u32];
    get.or_use child.aleo/nested__[false] r135 into r136;
    cast true r136 into r137 as Optional__BYnjU42CUEm;
    cast false r135 into r138 as Optional__BYnjU42CUEm;
    ternary r133 r137.val[0u32][0u32] r138.val[0u32][0u32] into r139;
    ternary r133 r137.val[0u32][1u32] r138.val[0u32][1u32] into r140;
    cast r139 r140 into r141 as [u8; 2u32];
    ternary r133 r137.val[1u32][0u32] r138.val[1u32][0u32] into r142;
    ternary r133 r137.val[1u32][1u32] r138.val[1u32][1u32] into r143;
    cast r142 r143 into r144 as [u8; 2u32];
    cast r141 r144 into r145 as [[u8; 2u32]; 2u32];
    ternary r133 r137.is_some r138.is_some into r146;
    cast r146 r145 into r147 as Optional__BYnjU42CUEm;
    ternary r147.is_some r147.val[0u32][0u32] 0u8 into r148;
    ternary r147.is_some r147.val[0u32][1u32] 0u8 into r149;
    cast r148 r149 into r150 as [u8; 2u32];
    ternary r147.is_some r147.val[1u32][0u32] 0u8 into r151;
    ternary r147.is_some r147.val[1u32][1u32] 0u8 into r152;
    cast r151 r152 into r153 as [u8; 2u32];
    cast r150 r153 into r154 as [[u8; 2u32]; 2u32];
    is.eq r154[0u32][0u32] 0u8 into r155;
    assert.eq r155 true;
    contains child.aleo/counter__[false] into r156;
    get.or_use child.aleo/counter__[false] 0u8 into r157;
    cast true r157 into r158 as Optional__3aph2JMPtnA;
    cast false 0u8 into r159 as Optional__3aph2JMPtnA;
    ternary r156 r158.is_some r159.is_some into r160;
    ternary r156 r158.val r159.val into r161;
    cast r160 r161 into r162 as Optional__3aph2JMPtnA;
    ternary r162.is_some r162.val 123u8 into r163;
    is.eq r163 123u8 into r164;
    assert.eq r164 true;

constructor:
    assert.eq edition 0u16;


---
Note: Treating dependencies as Aleo produces different results:

Error [ETYC0372005]: Unknown variable `child.aleo::flag`
    --> compiler-test:13:20
     |
  13 |             assert(child.aleo::flag.unwrap() == true);
     |                    ^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::scalar_val`
    --> compiler-test:14:20
     |
  14 |             assert(child.aleo::scalar_val.unwrap() == 1);
     |                    ^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::field_val`
    --> compiler-test:15:20
     |
  15 |             assert(child.aleo::field_val.unwrap() == 42field);
     |                    ^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::group_val`
    --> compiler-test:16:20
     |
  16 |             assert(child.aleo::group_val.unwrap() == 0group);
     |                    ^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::point`
    --> compiler-test:19:21
     |
  19 |             let p = child.aleo::point.unwrap();
     |                     ^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::points`
    --> compiler-test:24:22
     |
  24 |             let ps = child.aleo::points.unwrap();
     |                      ^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::stats`
    --> compiler-test:29:21
     |
  29 |             let s = child.aleo::stats.unwrap();
     |                     ^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::arr_u32`
    --> compiler-test:34:21
     |
  34 |             let a = child.aleo::arr_u32.unwrap();
     |                     ^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::arr_bool`
    --> compiler-test:37:21
     |
  37 |             let b = child.aleo::arr_bool.unwrap();
     |                     ^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::nested`
    --> compiler-test:40:21
     |
  40 |             let n = child.aleo::nested.unwrap();
     |                     ^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::counter`
    --> compiler-test:44:20
     |
  44 |             assert(child.aleo::counter.unwrap() == 9u8);
     |                    ^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::vec`
    --> compiler-test:46:22
     |
  46 |             let v2 = child.aleo::vec.get(2);
     |                      ^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::flag`
    --> compiler-test:58:20
     |
  58 |             assert(child.aleo::flag == none);
     |                    ^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::scalar_val`
    --> compiler-test:59:20
     |
  59 |             assert(child.aleo::scalar_val == none);
     |                    ^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::field_val`
    --> compiler-test:60:20
     |
  60 |             assert(child.aleo::field_val == none);
     |                    ^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::group_val`
    --> compiler-test:61:20
     |
  61 |             assert(child.aleo::group_val == none);
     |                    ^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::point`
    --> compiler-test:63:20
     |
  63 |             assert(child.aleo::point == none);
     |                    ^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::points`
    --> compiler-test:64:20
     |
  64 |             assert(child.aleo::points == none);
     |                    ^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::stats`
    --> compiler-test:65:20
     |
  65 |             assert(child.aleo::stats == none);
     |                    ^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::arr_u32`
    --> compiler-test:67:20
     |
  67 |             assert(child.aleo::arr_u32 == none);
     |                    ^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::arr_bool`
    --> compiler-test:68:20
     |
  68 |             assert(child.aleo::arr_bool == none);
     |                    ^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::nested`
    --> compiler-test:69:20
     |
  69 |             assert(child.aleo::nested == none);
     |                    ^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::counter`
    --> compiler-test:71:20
     |
  71 |             assert(child.aleo::counter == none);
     |                    ^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::vec`
    --> compiler-test:72:20
     |
  72 |             assert(child.aleo::vec.len() == 0);
     |                    ^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::flag`
    --> compiler-test:83:20
     |
  83 |             assert(child.aleo::flag.unwrap_or(false) == false);
     |                    ^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::scalar_val`
    --> compiler-test:84:20
     |
  84 |             assert(child.aleo::scalar_val.unwrap_or(0) == 0);
     |                    ^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::field_val`
    --> compiler-test:85:20
     |
  85 |             assert(child.aleo::field_val.unwrap_or(0field) == 0field);
     |                    ^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::group_val`
    --> compiler-test:86:20
     |
  86 |             assert(child.aleo::group_val.unwrap_or(0group) == 0group);
     |                    ^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::point`
    --> compiler-test:87:21
     |
  87 |             let p = child.aleo::point.unwrap_or(child.aleo::Point { x: 0field, y: 0field });
     |                     ^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::points`
    --> compiler-test:89:22
     |
  89 |             let ps = child.aleo::points
     |                      ^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::stats`
    --> compiler-test:92:21
     |
  92 |             let s = child.aleo::stats
     |                     ^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::arr_u32`
    --> compiler-test:96:21
     |
  96 |             let a = child.aleo::arr_u32.unwrap_or([0u32, 0u32, 0u32]);
     |                     ^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::arr_bool`
    --> compiler-test:99:21
     |
  99 |             let b = child.aleo::arr_bool.unwrap_or([false, false]);
     |                     ^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::nested`
    --> compiler-test:102:21
     |
 102 |             let n = child.aleo::nested.unwrap_or([[0u8, 0u8], [0u8, 0u8]]);
     |                     ^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo::counter`
    --> compiler-test:105:20
     |
 105 |             assert(child.aleo::counter.unwrap_or(123u8) == 123u8);
     |                    ^^^^^^^^^^^^^^^^^^^
